# zabbix-template-tool

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  config.example.yaml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  package.yml  release.yml
docs/: INSTALL_WHEEL.md  README.md  architecture.md  commands.md  development.md  limitations.md  lld-move.md  safety.md  testing.md  trigger-layering.md  versioning.md
src/ztt/: __init__.py  api_cli.py  api_exports.py  business.py  cli.py  compare_engine.py  compare_models.py  compare_render.py  compare_service.py  dependencies.py  export_engine.py  export_models.py  export_render.py  export_service.py  layers.py  lld.py  loader.py  main.py  merge.py  naming.py  profiles.py  promotion_cli.py  promotion_service.py  sync_models.py  sync_service.py  template.py  validation.py  writer.py  zabbix_api.py
tests/: test_api_integration.py  test_business.py  test_business_config.py  test_business_graph_hosts.py  test_business_graph_names.py  test_cli_analyze.py  test_cli_layers.py  test_custom_names.py  test_dependencies.py  test_item_triggers_to_system.py  test_layers.py  test_lld.py  test_loader.py  test_merge.py  test_profiles.py  test_promotion_service.py  test_real_trigger_shape.py  test_validation.py  test_zabbix_api.py
tests/samples/: template.yaml
