[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zabbix-template-tool"
version = "0.7.0"
description = "CLI toolkit to inspect and refactor Zabbix YAML templates"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "oxame" }]
dependencies = [
  "ruamel.yaml>=0.18.6,<0.19",
  "typer>=0.12.3,<1.0",
  "rich>=13.7.1,<14.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "ruff>=0.5,<1.0",
]

[project.scripts]
ztt = "ztt.api_cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ztt"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "UP"]
